Minor errors, references.

--- a/ref2-peerreview.bib
+++ b/ref2-peerreview.bib
@@ -1,3 +1,11 @@
+@article{OroOpen, 
+author = {Jan, Zeeshan and Third, Allan and Bachler, Michelle and Domingue, John}, 
+title = {{Peer-reviews on the blockchain.}}, 
+url = {http://oro.open.ac.uk/58593/1/Peer\_reviews\_on\_the\_blockchain.pdf}, 
+journal = {RefResh 2018: 1st Workshop on Reframing Research, 5 Dec 2018, Cologne, Germany}, 
+local-url = {file://localhost/Users/bt_neurospin/Documents/PAPERS/Peer_reviews_on_the_blockchain.pdf}, 
+year = {2020}
+}
 @article{Warne-RewRev, 
 author = {Warne, Verity}, 
 title = {{Rewarding reviewers – sense or sensibility? A Wiley study explained}}, 
@@ -12,21 +20,6 @@ keywords = {reward,incentivization},
 local-url = {file://localhost/Users/bt_neurospin/Documents/Papers%20Library/Warne-Rewarding%20reviewers%20–%20sense%20or%20sensibility-%20A%20Wiley%20study%20explained-2016-Learned%20Publishing.pdf}, 
 year = {2016}, 
 rating = {4}
-}
-@article{HauserIncent, 
-author = {Hauser, Marc and Fehr, Ernst}, 
-title = {{An Incentive Solution to the Peer Review Problem}}, 
-issn = {1544-9173}, 
-doi = {10.1371/journal.pbio.0050107}, 
-pmid = {17439298}, 
-pmcid = {PMC1852148}, 
-pages = {e107}, 
-number = {4}, 
-volume = {5}, 
-journal = {PLoS Biology}, 
-keywords = {incentivization}, 
-local-url = {file://localhost/Users/bt_neurospin/Documents/Papers%20Library/Hauser-An%20Incentive%20Solution%20to%20the%20Peer%20Review%20Problem-2007-PLoS%20Biology.pdf}, 
-year = {2007}
 }
 @article{Kendall-peerrev, 
 author = {Powell, Kendall}, 
