--- a/ref3-system.bib
+++ b/ref3-system.bib
@@ -63,6 +63,16 @@ local-url = {file://localhost/Users/bt_neurospin/Documents/Papers%20Library/Ross
 year = {2019}, 
 rating = {4}
 }
+@article{IPFS, 
+author = {Benet, Juan}, 
+title = {{IPFS - Content Addressed, Versioned, P2P File System}}, 
+eprint = {1407.3561}, 
+abstract = {{The InterPlanetary File System (IPFS) is a peer-to-peer distributed file system that seeks to connect all computing devices with the same system of files. In some ways, IPFS is similar to the Web, but IPFS could be seen as a single BitTorrent swarm, exchanging objects within one Git repository. In other words, IPFS provides a high throughput content-addressed block storage model, with content-addressed hyper links. This forms a generalized Merkle DAG, a data structure upon which one can build versioned file systems, blockchains, and even a Permanent Web. IPFS combines a distributed hashtable, an incentivized block exchange, and a self-certifying namespace. IPFS has no single point of failure, and nodes do not need to trust each other.}}, 
+journal = {arXiv}, 
+local-url = {file://localhost/Users/bt_neurospin/Downloads/ipdf.pdf}, 
+year = {2014}, 
+rating = {3}
+}
 @article{AZTEC, 
 author = {Williamson, Zachary J.}, 
 title = {{The AZTEC Protocol}}, 
