--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -42,22 +42,22 @@ Blockchain Engineer, London, UK \\
 \maketitle              % typeset the header of the contribution
 %
 \begin{abstract}
-Peer-review is a necessary and essential quality control step for scientific publications but lacks proper  incentives. Indeed, the process, which is very costly in terms of time and intellectual investment, not only is not remunerated by the journals but it is also not openly recognized by the academic community as a relevant scientific output for a researcher. Therefore, scientific dissemination is affected in timeliness, quality and fairness. Here, to solve this issue, we propose a blockchain-based incentive system that rewards scientists for peer-reviewing other scientists’ work and that builds up trust and reputation. We designed a protocol of smart contracts called Ants-Review that allows authors to issue a bounty for open anonymous peer-reviews on Ethereum. If requirements are met, peer-reviews will be accepted and paid by the approver proportionally to their assessed quality. To promote ethical behaviour and inclusiveness the system implements a gamified mechanism that allows the whole community to evaluate the peer-reviews and vote for the best ones.
+Peer-review is a necessary and essential quality control step for scientific publications but lacks proper  incentives. Indeed, the process, which is very costly in terms of time and intellectual investment, not only is not remunerated by the journals but it is also not openly recognized by the academic community as a relevant scientific output for a researcher. Therefore, scientific dissemination is affected in timeliness, quality and fairness. Here, to solve this issue, we propose a blockchain-based incentive system that rewards scientists for peer-reviewing other scientists’ work and that builds up trust and reputation. We designed a protocol of smart contracts called Ants-Review that allows authors to issue a bounty for open anonymous peer-reviews on Ethereum. If requirements are met, peer reviews will be accepted and paid by the approver proportionally to their assessed quality. To promote ethical behaviour and inclusiveness the system implements a gamified mechanism that allows the whole community to evaluate the peer-reviews and vote for the best ones.
 \keywords{Blockchain \and Ethereum \and Peer-review \and Incentivization.}
 \end{abstract}
 %
 %
 \section{Introduction}
 Since the birth of Bitcoin \cite{BitcoinSatoshi} in 2008 as a peer-to-peer electronic cash system, blockchain technologies have spread far beyond the sole cryptocurrency domain, in particular after the implementation of general purpose smart contracts introduced by Ethereum \cite{Ethereum-Wood}.
-Besides a growing number of applications ranging from De-Fi, healthcare, music industry, government, identity to cite but a few, blockchain technology has recently started to catalyse the attention of the scientific community as well \cite{Bitcoin-Nature-focus,vanRossum2017-DigSci} with the promising potential of being a `game changer' in outdated and broken scientific practices and leading towards open science \cite{AES}. Indeed, scholars have pointed out how the intrinsic characteristics of blockchain technology set the basis for a open science infrastructure \cite{ReviewBlockchain2019} in which decisional processes are transparent and therefore more democratically accessible to all the stakeholders (researchers, reviewers, funders, taxpayers). Those are: the consensus algorithm \cite{ConsAlg}, a deterministic computational trust that allows for \emph{decentralization}, for which there are no trusted third parties; the Proof of Existence (PoE) that via \emph{cryptographic hashing} and \emph{timestamping} creates a digital footprint able to keep a traceable chronological record of research objects that cannot be altered or retrieved (due to its property of \emph{immutability} or \emph{append-only})\cite{ReviewBlockchain2019}. In particular, a `blockchainified science'\cite{BlockchainforScience} could `reduce waste'\cite{ReducingWaste-Lancet}, by disclosing each step in the research cycle to `scientific self-correction' way before the final publication step, and therefore help fixing the current reproducibility crisis in science.
-\newline A thorny issue in the academic system that can - and should - be tackled by blockchain concerns the status and accreditation of peer review, the core process of scientific validation currently facing a crisis \cite{Gropp-PeerRevStress}.
+Besides a growing number of applications ranging from De-Fi, healthcare, music industry, government, identity, to cite but a few, blockchain technology has recently started to catalyse the attention of the scientific community as well \cite{Bitcoin-Nature-focus,vanRossum2017-DigSci} with the promising potential of being a `game changer' in outdated and broken scientific practices and leading towards open science \cite{AES}. Indeed, scholars have pointed out how the intrinsic characteristics of blockchain technology set the basis for a open science infrastructure \cite{ReviewBlockchain2019} in which decisional processes are transparent and therefore more democratically accessible to all the stakeholders (researchers, reviewers, funders, taxpayers). Those are: the consensus algorithm \cite{ConsAlg}, a deterministic computational trust that allows for \emph{decentralization}, for which there are no trusted third parties; the Proof of Existence (PoE) that via \emph{cryptographic hashing} and \emph{timestamping} creates a digital footprint able to keep a traceable chronological record of research objects that cannot be altered or retrieved (due to its property of \emph{immutability} or \emph{append-only})\cite{ReviewBlockchain2019}. In particular, a `blockchainified science'\cite{BlockchainforScience} could `reduce waste'\cite{ReducingWaste-Lancet}, by disclosing each step in the research cycle to `scientific self-correction' way before the final publication step, and therefore help fixing the current reproducibility crisis in science.
+\newline A thorny issue in the academic system that can - and we think it should - be tackled by blockchain concerns the status and accreditation of peer review, the core process of scientific validation currently facing a crisis \cite{Gropp-PeerRevStress}.
 In this paper we propose a solution to the problem of reviewers recognition based on the principles of tokenomics \cite{TokenEcon} and in line with the values of open science.
 
 \section{Background}
 \subsection{Peer review: present problems and mild solutions}
 Peer review is still the only quality control mechanism devoted to evaluating scientific outcomes. The purpose of peer review is \say{improving the quality of the published paper, determining the originality of the manuscript, determining the importance of the findings, detecting fraud, and detecting plagiarism.}\cite{Gropp-PeerRevStress}. However, the system is `ﬂawed' and outdated \cite{Smith2006} and presents multifaceted issues \cite{Walker2015-trends}, here reviewed.
-\subsubsection{A slow multi-stage process.} The main issues affecting the effectiveness of peer review is the delay between paper submission and journal acceptance for publication. The traditional peer review process is centralized around the publisher's editor(s). The author(s) submit the manuscript to the journal where an editorial team assesses if the paper meets the scopes of the journal and novelty criteria. If the editorial decision is to send the manuscript for review, the handling editor personally selects potential reviewers. The reviewers identity is usually only known to the editor but is hidden to the authors or the other reviewers themselves (\emph{single-blind review}). Reviewers independently conduct their reviews by exposing in their reports strengths and weaknesses of the manuscript and sometimes substantially improving the draft. Depending on if the decision is a major or minor revision, authors are invited to re-submit a corrected or improved version of the manuscript. The same reviewers might be contacted again to continue the same peer review process. This process can take multiple rounds and is a huge time investment both for authors and reviewers. An analysis of all papers published in \emph{PubMed} for a time period of 30 years claims that the median review time is around 100 days \cite{Kendall-peerrev}.
-\subsubsection{Lack of recognition and incentives.} Peer reviewing is an invisible activity purely conducted on voluntary basis, neither paid by the journals or officially credited via standard scientific metrics (such as the ones that establish the Impact Factor of an author). Thus, it does not lead to advancements in career or help securing grants. Researchers are motivated to do peer-review by a sense of belonging and a desire to `give back' to the community. A major consequence of not promoting incentives for the quality (and quantity) of peer reviews is to either slow down publication of potentially good research which awaits for validation \cite{HauserIncent} or let bad science be published through sloppy and uncritical reviews.
+\subsubsection{A slow multi-stage process.} The main issues affecting the effectiveness of peer review is the delay between paper submission and journal acceptance for publication. The traditional peer review process is centralized around the journals' editor(s). The author(s) submit the manuscript to the journal where an editorial team assesses if the paper meets the scopes of the journal and novelty criteria. If the editorial decision is to send the manuscript for review, the handling editor personally selects potential reviewers. The reviewers identity is usually only known to the editor but is hidden to the authors or the other reviewers themselves (\emph{single-blind review}). Reviewers independently conduct their reviews by exposing in their reports strengths and weaknesses of the manuscript and sometimes substantially improving the draft. Depending on if the decision is a major or minor revision, authors are invited to re-submit a corrected or improved version of the manuscript. The same reviewers might be contacted again to continue the same peer review process. This process can take multiple rounds and is a huge time investment both for authors and reviewers. An analysis of all papers published in \emph{PubMed} for a time period of 30 years claims that the median review time is around 100 days \cite{Kendall-peerrev}.
+\subsubsection{Lack of recognition and incentives.} Peer reviewing is an invisible activity purely conducted on voluntary basis, neither paid by the journals or officially credited via standard scientific metrics (such as the ones that establish the Impact Factor of an author). Thus, it does not lead to advancements in career or help securing grants. Researchers are motivated to do peer-review by a sense of belonging and a desire to `give back' to the community \cite{Warne-RewRev}. A major consequence of not promoting incentives for the quality (and quantity) of peer reviews is to either slow down publication of potentially good research which awaits for validation \cite{HauserIncent} or let bad science be published through sloppy and uncritical reviews.
 \subsubsection{Fraud and misconduct.} Due to the `publish or perish culture' pressures, unethical behaviour from reviewers has been occasionally reported, from abusive behaviour towards authors \cite{Smith2006,tragedy-reviewers} to identity fraud. Some studies have reported an improvement in the transparency and civility of the review process when open reports are released according to the standards of \emph{open peer review} \cite{PeerRev-NatComm}.
 \subsubsection{Social and cognitive biases.} Given the fact that anonymity is usually asymmetrically applied only for reviewers, many power related dynamics can influence the reviewers decision \cite{Tennant2017-F1000R}, such as gender or cultural discrimination and social prestige of the institution. To solve this problem some journals have implemented \emph{double-blind review} process (the identity of both authors and reviewers are masked) which seems to reduce the bias towards minorities.
 \subsubsection{Peer reviews need to be...reviewed.} There is high variability in the reliability and depth of reviews and a recurrent question is: \say{Who watches the watchers?} \cite{Tennant2017-F1000R}.
